chore: allow the SQL check API connect to an existed database
